Implemented functionality to add cars.

--- a/DreamIsland/Views/_ViewImports.cshtml
+++ b/DreamIsland/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using DreamIsland
 @using DreamIsland.Models
+@using DreamIsland.Models.Cars
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
