--- a/DreamIsland/Views/Shared/_Layout.cshtml
+++ b/DreamIsland/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/Dream-Island_Logo.jpg" alt="Dream Island" height="40" width="40" /></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Add">Add Car</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
