Added entities for Partner, Celebrity and Collectible.

--- a/DreamIsland/Views/Shared/_Layout.cshtml
+++ b/DreamIsland/Views/Shared/_Layout.cshtml
@@ -21,7 +21,16 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/Dream-Island_Logo.jpg" alt="Dream Island" height="40" width="40" /></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Add">Add Car</a>
+                            <div class="dropdown">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Add
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Cars" asp-action="Add">Add Car</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Celebrities" asp-action="Add">Add Celebrity</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Collectibles" asp-action="Add">Add Collectible</a>
+                                </div>
+                            </div>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="All">All Cars</a>
