Added functionality to become a partner

--- a/DreamIsland/Views/Cars/Add.cshtml
+++ b/DreamIsland/Views/Cars/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model AddCarFormModel
 
 @{
-    ViewData["Title"] = "Dream Island - Add Car";
+    ViewBag.Title = "Dream Island - Add Car";
 }
 
 <div class="row">
