--- a/DreamIsland/Views/_ViewImports.cshtml
+++ b/DreamIsland/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using DreamIsland
 @using DreamIsland.Models
 @using DreamIsland.Models.Cars
+@using DreamIsland.Models.Partners
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
