--- a/DreamIsland/Views/Home/Index.cshtml
+++ b/DreamIsland/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Dream Island - Welcome";
+    ViewBag.Title = "Dream Island - Welcome";
 }
 
 <div class="text-center">
