--- a/DreamIsland/Views/Home/Privacy.cshtml
+++ b/DreamIsland/Views/Home/Privacy.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewBag.Title = "Dream Island - Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+<h1>@ViewBag.Title</h1>
 
 <div class="container">
     <h1>Collecting and Using Your Personal Data</h1>
