--- a/DreamIsland/Views/Cars/Add.cshtml
+++ b/DreamIsland/Views/Cars/Add.cshtml
@@ -46,7 +46,7 @@
                 <label class="form-check-label" asp-for="HasSeatMassager">Seat Massager</label>
             </div>
             <div class="row justify-content-center">
-                <input class="btn btn-primary" type="submit" value="Add Car" />
+                <input class="btn btn-primary mt-4" type="submit" value="Add Car" />
             </div>
         </form>
     </div>
