--- a/DreamIsland/Views/_ViewImports.cshtml
+++ b/DreamIsland/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using DreamIsland
+@using DreamIsland.Data.Models
 @using DreamIsland.Models
 @using DreamIsland.Models.Cars
 @using DreamIsland.Models.Partners
+@using DreamIsland.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
