Implemented functionality to add islands. Extra columns added to island entity.

--- a/DreamIsland/Views/Shared/_Layout.cshtml
+++ b/DreamIsland/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                                     Add
                                 </button>
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Islands" asp-action="Add">Add Island</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="Cars" asp-action="Add">Add Car</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="Celebrities" asp-action="Add">Add Celebrity</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="Collectibles" asp-action="Add">Add Collectible</a>
