--- a/DreamIsland/Views/Shared/_LoginPartial.cshtml
+++ b/DreamIsland/Views/Shared/_LoginPartial.cshtml
@@ -26,6 +26,7 @@
                         My Offers
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" asp-area="" asp-controller="Islands" asp-action="My">My Islands</a>
                         <a class="dropdown-item" asp-area="" asp-controller="Cars" asp-action="My">My Cars</a>
                         <a class="dropdown-item" asp-area="" asp-controller="Celebrities" asp-action="My">My Celebrities</a>
                         <a class="dropdown-item" asp-area="" asp-controller="Collectibles" asp-action="My">My Collectibles</a>
