--- a/DreamIsland/Views/_ViewImports.cshtml
+++ b/DreamIsland/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using DreamIsland.Data.Models
 @using DreamIsland.Models
 @using DreamIsland.Models.Cars
+@using DreamIsland.Models.Islands
 @using DreamIsland.Models.Partners
 @using DreamIsland.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
