--- a/DreamIsland/Views/Cars/Add.cshtml
+++ b/DreamIsland/Views/Cars/Add.cshtml
@@ -10,12 +10,12 @@
         <form method="post">
             <div class="form-group">
                 <label asp-for="Brand"></label>
-                <input asp-for="Brand" class="form-control" placeholder="Enter car brand here...">
+                <input asp-for="Brand" class="form-control" placeholder="Enter car brand...">
                 <span asp-validation-for="Brand" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Model"></label>
-                <input asp-for="Model" class="form-control" placeholder="Enter car model here...">
+                <input asp-for="Model" class="form-control" placeholder="Enter car model...">
                 <span asp-validation-for="Model" class="small text-danger"></span>
             </div>
             <div class="form-group">
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ImageUrl"></label>
-                <input asp-for="ImageUrl" class="form-control" placeholder="Enter car image url here...">
+                <input asp-for="ImageUrl" class="form-control" placeholder="Enter car image url...">
                 <span asp-validation-for="ImageUrl" class="small text-danger"></span>
             </div>
             <div class="form-group">
