--- a/DreamIsland/Views/Home/Index.cshtml
+++ b/DreamIsland/Views/Home/Index.cshtml
@@ -1,8 +1,103 @@
-﻿@{
+﻿@model List<IslandListingViewModel>
+
+@{
     ViewBag.Title = "Dream Island - Welcome";
+
+    var firstIsland = Model.Any() ? Model[0] : null;
+    var secondIsland = Model.Count > 1 ? Model[1] : null;
+    var thirdIsland = Model.Count > 2 ? Model[2] : null;
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@if (!Model.Any())
+{
+    <div class="jumbotron">
+        <h1 class="display-4">Welcome to Dream Island!</h1>
+        <p class="lead">Currently we do not have any available islands for sale</p>
+        <hr class="my-4">
+        <p>You can contact us or check other listings</p>
+        <p class="lead">
+            <a asp-controller="Cars" asp-action="All" class="btn btn-primary btn-lg">Car Offers</a>
+        </p>
+        <p class="lead">
+            <a asp-controller="Celebrities" asp-action="All" class="btn btn-primary btn-lg">Celebrity Offers</a>
+        </p>
+        <p class="lead">
+            <a asp-controller="Collectibles" asp-action="All" class="btn btn-primary btn-lg">Collectible Offers</a>
+        </p>
+    </div>
+}
+else
+{
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="@firstIsland.ImageUrl" alt="@firstIsland.Name">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>@firstIsland.Name</h5>
+                    @{
+
+                        var firstIslandPrice = "Price upon request";
+
+                        if (firstIsland.Price.HasValue)
+                        {
+                            firstIslandPrice = firstIsland.Price + " USD";
+                        }
+                    }
+                    <p>@firstIslandPrice</p>
+                </div>
+            </div>
+            @if (secondIsland != null)
+            {
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="@secondIsland.ImageUrl" alt="@secondIsland.Name">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>@secondIsland.Name</h5>
+                        @{
+
+                            var secondIslandPrice = "Price upon request";
+
+                            if (secondIsland.Price.HasValue)
+                            {
+                                secondIslandPrice = secondIsland.Price + " USD";
+                            }
+                        }
+                        <p>@secondIslandPrice</p>
+                    </div>
+                </div>
+            }
+            @if (thirdIsland != null)
+            {
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="@thirdIsland.ImageUrl" alt="@thirdIsland.Name">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>@thirdIsland.Name</h5>
+                        @{
+
+                            var thirdIslandPrice = "Price upon request";
+
+                            if (thirdIsland.Price.HasValue)
+                            {
+                                thirdIslandPrice = thirdIsland.Price + " USD";
+                            }
+                        }
+                        <p>@thirdIslandPrice</p>
+                    </div>
+                </div>
+            }
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+}
+
