--- a/DreamIsland/Views/Shared/_LoginPartial.cshtml
+++ b/DreamIsland/Views/Shared/_LoginPartial.cshtml
@@ -18,8 +18,21 @@
                 <a class="nav-link text-dark" asp-area="" asp-controller="Partners" asp-action="Become">Become a partner</a>
             </li>
         }
-        else if(userIsPartner && !userIsAdmin)
+        else if (userIsPartner && !userIsAdmin)
         {
+            <li class="nav-item">
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Add
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" asp-area="" asp-controller="Islands" asp-action="Add">Add Island</a>
+                        <a class="dropdown-item" asp-area="" asp-controller="Cars" asp-action="Add">Add Car</a>
+                        <a class="dropdown-item" asp-area="" asp-controller="Celebrities" asp-action="Add">Add Celebrity</a>
+                        <a class="dropdown-item" asp-area="" asp-controller="Collectibles" asp-action="Add">Add Collectible</a>
+                    </div>
+                </div>
+            </li>
             <li class="nav-item">
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
