--- a/DreamIsland/Views/Home/Index.cshtml
+++ b/DreamIsland/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@ else
             <div class="carousel-item active">
                 <img class="d-block w-100" src="@firstIsland.ImageUrl" alt="@firstIsland.Name">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>@firstIsland.Name</h5>
+                    <h5><a class="btn btn-primary" asp-controller="Islands" asp-action="Details" asp-route-id="@firstIsland.Id">@firstIsland.Name</a></h5>
                     @{
 
                         var firstIslandPrice = "Price upon request";
@@ -57,7 +57,7 @@ else
                 <div class="carousel-item">
                     <img class="d-block w-100" src="@secondIsland.ImageUrl" alt="@secondIsland.Name">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>@secondIsland.Name</h5>
+                        <h5><a class="btn btn-primary" asp-controller="Islands" asp-action="Details" asp-route-id="@secondIsland.Id">@secondIsland.Name</a></h5>
                         @{
 
                             var secondIslandPrice = "Price upon request";
@@ -76,7 +76,7 @@ else
                 <div class="carousel-item">
                     <img class="d-block w-100" src="@thirdIsland.ImageUrl" alt="@thirdIsland.Name">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>@thirdIsland.Name</h5>
+                        <h5><a class="btn btn-primary" asp-controller="Islands" asp-action="Details" asp-route-id="@thirdIsland.Id">@thirdIsland.Name</a></h5>
                         @{
 
                             var thirdIslandPrice = "Price upon request";
