--- a/DreamIsland/Views/_ViewImports.cshtml
+++ b/DreamIsland/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using DreamIsland.Models
 @using DreamIsland.Models.Cars
 @using DreamIsland.Models.Islands
+@using DreamIsland.Models.Celebrities
 @using DreamIsland.Models.Partners
 @using DreamIsland.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
