--- a/DreamIsland/Views/Islands/Add.cshtml
+++ b/DreamIsland/Views/Islands/Add.cshtml
@@ -25,17 +25,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="SizeInSquareKm"></label>
-                <input asp-for="SizeInSquareKm" class="form-control" placeholder="Enter island location..." />
+                <input asp-for="SizeInSquareKm" type="number" class="form-control" placeholder="Enter island size in square km..." />
                 <span asp-validation-for="SizeInSquareKm" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ImageUrl"></label>
-                <input asp-for="ImageUrl" class="form-control" placeholder="Enter island location..." />
+                <input asp-for="ImageUrl" class="form-control" placeholder="Enter island image URL..." />
                 <span asp-validation-for="ImageUrl" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price"></label>
-                <input asp-for="Price" class="form-control" placeholder="Enter island price in USD..." />
+                <input asp-for="Price" type="number" class="form-control" placeholder="Enter island price in USD..." />
                 <span asp-validation-for="Price" class="small text-danger"></span>
             </div>
             <div class="form-group">
