Implemented functionality to add and list collectibles

--- a/DreamIsland/Views/_ViewImports.cshtml
+++ b/DreamIsland/Views/_ViewImports.cshtml
@@ -4,6 +4,8 @@
 @using DreamIsland.Models.Cars
 @using DreamIsland.Models.Islands
 @using DreamIsland.Models.Celebrities
+@using DreamIsland.Models.Collectibles
+@using DreamIsland.Data.Enums
 @using DreamIsland.Models.Partners
 @using DreamIsland.Infrastructure
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
