--- a/DreamIsland/Views/Celebrities/Add.cshtml
+++ b/DreamIsland/Views/Celebrities/Add.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Age"></label>
-                <input asp-for="Age" type="number" class="form-control" placeholder="Please fill celebrity age...">
+                <input asp-for="Age" type="number" class="form-control" placeholder="Please fill celebrity age if known...">
                 <span asp-validation-for="Age" class="small text-danger"></span>
             </div>
             <div class="row justify-content-center">
