--- a/DreamIsland/Views/Islands/Add.cshtml
+++ b/DreamIsland/Views/Islands/Add.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="SizeInSquareKm"></label>
-                <input asp-for="SizeInSquareKm" type="number" class="form-control" placeholder="Enter island size in square km..." />
+                <input asp-for="SizeInSquareKm" type="number" step="0.01" class="form-control" placeholder="Enter island size in square km..." />
                 <span asp-validation-for="SizeInSquareKm" class="small text-danger"></span>
             </div>
             <div class="form-group">
