--- a/DreamIsland/Views/Cars/All.cshtml
+++ b/DreamIsland/Views/Cars/All.cshtml
@@ -8,6 +8,7 @@
                 <img class="card-img-top" src=@car.ImageUrl alt=@(car.Brand + " " + car.Model)>
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">@(car.Brand + " " + car.Model)</h5>
+                    <p>@car.Year</p>
                     <a asp-controller="Cars" asp-action="Details" asp-route-id="@car.Id" class="btn btn-primary">Details</a>
                 </div>
             </div>
