--- a/DreamIsland/Views/Islands/All.cshtml
+++ b/DreamIsland/Views/Islands/All.cshtml
@@ -65,12 +65,42 @@
     }
 </div>
 
-@section Scripts{ 
-<script>
-    $(function () {
-        $('#regions, #island-sorting').change(function () {
-            this.form.submit();
+@{
+    int previousPage = Model.CurrentPage - 1;
+
+    if (previousPage < 1)
+    {
+        previousPage = 1;
+    }
+
+    var maxPage = Math.Ceiling((double)Model.TotalItems / AllIslandsQueryModel.ItemsPerPage);
+
+    var shouldButtonBeDisabled = Model.CurrentPage == maxPage || !Model.Islands.Any();
+}
+
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+        <li class="page-item @(Model.CurrentPage == 1 ? "disabled" : string.Empty)">
+            <a class="page-link"
+               asp-controller="Islands" asp-action="All"
+               asp-route-currentPage="@previousPage" asp-route-region="@Model.Region"
+               asp-route-searchTerm="@Model.SearchTerm" asp-route-IslandSorting="@((int)Model.IslandSorting)">Previous</a>
+        </li>
+        <li class="page-item  @(shouldButtonBeDisabled ? "disabled" : string.Empty)">
+            <a class="page-link"
+               asp-controller="Islands" asp-action="All"
+               asp-route-currentPage="@(Model.CurrentPage + 1)" asp-route-region="@Model.Region"
+               asp-route-searchTerm="@Model.SearchTerm" asp-route-IslandSorting="@((int)Model.IslandSorting)">Next</a>
+        </li>
+    </ul>
+</nav>
+
+@section Scripts{
+    <script>
+        $(function () {
+            $('#regions, #island-sorting').change(function () {
+                this.form.submit();
+            });
         });
-    });
-</script>
+    </script>
 }
