--- a/DreamIsland/Views/Celebrities/All.cshtml
+++ b/DreamIsland/Views/Celebrities/All.cshtml
@@ -39,6 +39,37 @@
     }
 </div>
 
+@{ 
+    var previousPage = Model.CurrentPage - 1;
+
+    if(previousPage < 1)
+    {
+        previousPage = 1;
+    }
+
+    var maxPage = Math.Ceiling((double)Model.TotalItems / AllCelebritiesQueryModel.ItemsPerPage);
+
+    var shouldBeDisabled = Model.CurrentPage == maxPage || !Model.Celebrities.Any();
+}
+
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+        <li class="page-item @(Model.CurrentPage == 1 ? "disabled" : string.Empty)">
+            <a class="page-link" 
+               asp-controller="Celebrities" asp-action="All" 
+               asp-route-currentPage="@previousPage" asp-route-searchTerm="@Model.SearchTerm" 
+               asp-route-occupation="@Model.Occupation">Previous</a>
+        </li>
+        <li class="page-item active"><a class="page-link" href="#">@Model.CurrentPage</a></li>
+        <li class="page-item @(shouldBeDisabled ? "disabled" : string.Empty)">
+            <a class="page-link" 
+               asp-controller="Celebrities" asp-action="All" 
+               asp-route-currentPage="@(Model.CurrentPage + 1)" asp-route-searchTerm="@Model.SearchTerm" 
+               asp-route-occupation="@Model.Occupation">Next</a>
+        </li>
+    </ul>
+</nav>
+
 @section Scripts{ 
 <script>
     $(function () {
