--- a/DreamIsland/Views/Islands/All.cshtml
+++ b/DreamIsland/Views/Islands/All.cshtml
@@ -86,6 +86,7 @@
                asp-route-currentPage="@previousPage" asp-route-region="@Model.Region"
                asp-route-searchTerm="@Model.SearchTerm" asp-route-IslandSorting="@((int)Model.IslandSorting)">Previous</a>
         </li>
+        <li class="page-item active"><a class="page-link" href="#">@Model.CurrentPage</a></li>
         <li class="page-item  @(shouldButtonBeDisabled ? "disabled" : string.Empty)">
             <a class="page-link"
                asp-controller="Islands" asp-action="All"
