Added missing content messages with photos

--- a/DreamIsland/Views/Islands/All.cshtml
+++ b/DreamIsland/Views/Islands/All.cshtml
@@ -96,6 +96,17 @@
     </ul>
 </nav>
 
+@if (!Model.Islands.Any())
+{
+    @if (!Model.Islands.Any())
+    {
+        <h1 class="text-center">No islands found by the given criteria!</h1>
+        <div class="text-center">
+            <img src="https://static3.depositphotos.com/1002881/151/i/600/depositphotos_1519030-stock-photo-error-404.jpg" class="rounded" alt="missing-island">
+        </div>
+    }
+}
+
 @section Scripts{
     <script>
         $(function () {
