--- a/DreamIsland/Views/Cars/All.cshtml
+++ b/DreamIsland/Views/Cars/All.cshtml
@@ -51,10 +51,10 @@
     }
 </div>
 
-@{ 
+@{
     var previousPage = Model.CurrentPage - 1;
 
-    if(previousPage < 1)
+    if (previousPage < 1)
     {
         previousPage = 1;
     }
@@ -67,20 +67,28 @@
 <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
         <li class="page-item @(Model.CurrentPage == 1 ? "disabled" : string.Empty)">
-            <a class="page-link" 
-               asp-controller="Cars" asp-action="All" 
+            <a class="page-link"
+               asp-controller="Cars" asp-action="All"
                asp-route-currentPage="@previousPage" asp-route-searchTerm="@Model.SearchTerm"
                asp-route-brand="@Model.Brand" asp-route-CarsSorting="@((int)Model.CarsSorting)">Previous</a>
         </li>
         <li class="page-item active"><a class="page-link" href="#">@Model.CurrentPage</a></li>
         <li class="page-item @(shouldBeDisabled? "disabled" : string.Empty)">
-            <a class="page-link" 
-               asp-controller="Cars" asp-action="All" 
-               asp-route-currentPage="@(Model.CurrentPage + 1)" asp-route-searchTerm="@Model.SearchTerm" 
+            <a class="page-link"
+               asp-controller="Cars" asp-action="All"
+               asp-route-currentPage="@(Model.CurrentPage + 1)" asp-route-searchTerm="@Model.SearchTerm"
                asp-route-brand="@Model.Brand" asp-route-CarsSorting="@((int)Model.CarsSorting)">Next</a>
         </li>
     </ul>
 </nav>
+
+@if (!Model.Cars.Any())
+{
+    <h1 class="text-center">No cars found by the given criteria!</h1>
+    <div class="text-center">
+        <img src="http://a.espncdn.com/photo/2015/1217/basil_800x450.png" class="rounded" alt="missing-car">
+    </div>
+}
 
 @section Scripts{
     <script>
