--- a/DreamIsland/Views/Celebrities/All.cshtml
+++ b/DreamIsland/Views/Celebrities/All.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AllCelebritiesQueryModel
 
-@{ 
+@{
     ViewBag.Title = "Dream Island - All Celebrities";
 }
 
@@ -39,10 +39,10 @@
     }
 </div>
 
-@{ 
+@{
     var previousPage = Model.CurrentPage - 1;
 
-    if(previousPage < 1)
+    if (previousPage < 1)
     {
         previousPage = 1;
     }
@@ -55,28 +55,36 @@
 <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
         <li class="page-item @(Model.CurrentPage == 1 ? "disabled" : string.Empty)">
-            <a class="page-link" 
-               asp-controller="Celebrities" asp-action="All" 
-               asp-route-currentPage="@previousPage" asp-route-searchTerm="@Model.SearchTerm" 
+            <a class="page-link"
+               asp-controller="Celebrities" asp-action="All"
+               asp-route-currentPage="@previousPage" asp-route-searchTerm="@Model.SearchTerm"
                asp-route-occupation="@Model.Occupation">Previous</a>
         </li>
         <li class="page-item active"><a class="page-link" href="#">@Model.CurrentPage</a></li>
         <li class="page-item @(shouldBeDisabled ? "disabled" : string.Empty)">
-            <a class="page-link" 
-               asp-controller="Celebrities" asp-action="All" 
-               asp-route-currentPage="@(Model.CurrentPage + 1)" asp-route-searchTerm="@Model.SearchTerm" 
+            <a class="page-link"
+               asp-controller="Celebrities" asp-action="All"
+               asp-route-currentPage="@(Model.CurrentPage + 1)" asp-route-searchTerm="@Model.SearchTerm"
                asp-route-occupation="@Model.Occupation">Next</a>
         </li>
     </ul>
 </nav>
 
-@section Scripts{ 
-<script>
-    $(function () {
-        $('#occupations').change(function () {
-            this.form.submit();
+@if (!Model.Celebrities.Any())
+{
+    <h1 class="text-center">No celebrities found by the given criteria!</h1>
+    <div class="text-center">
+        <img src="https://assets.ltkcontent.com/images/14530/18195.48674976_doyle_21771dceb0.jpg" class="rounded" alt="missing-celebrity">
+    </div>
+}
+
+@section Scripts{
+    <script>
+        $(function () {
+            $('#occupations').change(function () {
+                this.form.submit();
+            });
         });
-    });
-</script>
+    </script>
 }
 
