--- a/DreamIsland/Views/Collectibles/All.cshtml
+++ b/DreamIsland/Views/Collectibles/All.cshtml
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group col-md-6">
             <label asp-for="SearchTerm"></label>
-            <input asp-for="SearchTerm" class="form-control" placeholder="Please enter collectible name"/>
+            <input asp-for="SearchTerm" class="form-control" placeholder="Please enter collectible name" />
         </div>
     </div>
 </form>
@@ -41,10 +41,10 @@
     }
 </div>
 
-@{ 
+@{
     var previousPage = Model.CurrentPage - 1;
 
-    if(previousPage < 1)
+    if (previousPage < 1)
     {
         previousPage = 1;
     }
@@ -57,27 +57,35 @@
 <nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
         <li class="page-item @(Model.CurrentPage == 1 ? "disabled" : string.Empty)">
-            <a class="page-link" 
-               asp-controller="Collectibles" asp-action="All" 
-               asp-route-currentPage="@previousPage" asp-route-searchTerm="@Model.SearchTerm" 
+            <a class="page-link"
+               asp-controller="Collectibles" asp-action="All"
+               asp-route-currentPage="@previousPage" asp-route-searchTerm="@Model.SearchTerm"
                asp-route-rarityLevel="@Model.RarityLevel">Previous</a>
         </li>
         <li class="page-item active"><a class="page-link" href="#">@Model.CurrentPage</a></li>
         <li class="page-item @(shouldBeDisabled ? "disabled" : string.Empty)">
-            <a class="page-link" 
-               asp-controller="Collectibles" asp-action="All" 
-               asp-route-currentPage="@(Model.CurrentPage + 1)" asp-route-searchTerm="@Model.SearchTerm" 
+            <a class="page-link"
+               asp-controller="Collectibles" asp-action="All"
+               asp-route-currentPage="@(Model.CurrentPage + 1)" asp-route-searchTerm="@Model.SearchTerm"
                asp-route-rarityLevel="@Model.RarityLevel">Next</a>
         </li>
     </ul>
 </nav>
 
-@section Scripts{ 
-<script>
-    $(function () {
-        $('#rarity-levels').change(function () {
-            this.form.submit();
+@if (!Model.Collectibles.Any())
+{
+    <h1 class="text-center">No collectibles found by the given criteria!</h1>
+    <div class="text-center">
+        <img src="https://i.pinimg.com/originals/00/58/7c/00587cd1a2abb66a7e883f9dbfc097f8.jpg" class="rounded" alt="missing-collectible">
+    </div>
+}
+
+@section Scripts{
+    <script>
+        $(function () {
+            $('#rarity-levels').change(function () {
+                this.form.submit();
+            });
         });
-    });
-</script>
+    </script>
 }
