--- a/DreamIsland/Views/Collectibles/All.cshtml
+++ b/DreamIsland/Views/Collectibles/All.cshtml
@@ -25,21 +25,7 @@
     </div>
 </form>
 
-<div class="row">
-    @foreach (var collectible in Model.Collectibles)
-    {
-        <div class="col-md-4">
-            <div class="card">
-                <img class="card-img-top" src=@collectible.ImageUrl alt=@collectible.Name>
-                <div class="card-body text-center">
-                    <h5 class="card-title text-center">@collectible.Name</h5>
-                    <p>@collectible.RarityLevel</p>
-                    <a asp-controller="Collectibles" asp-action="Details" asp-route-id="@collectible.Id" class="btn btn-primary">Details</a>
-                </div>
-            </div>
-        </div>
-    }
-</div>
+<partial name="_CollectiblesPartial" model="@Model.Collectibles" />
 
 @{
     var previousPage = Model.CurrentPage - 1;
