Implemented functionality for the Admin to Edit from All View. Added Client side validation in the Views.

--- a/DreamIsland/Views/Celebrities/Edit.cshtml
+++ b/DreamIsland/Views/Celebrities/Edit.cshtml
@@ -1,8 +1,12 @@
 ﻿@model CelebrityFormModel
 
-@{ 
+@{
     ViewBag.Title = "Dream Island - Edit Celebrity";
     ViewBag.FormTitle = "Edit Celebrity";
 }
 
 <partial name="_CelebrityFormPartial" model="@Model" />
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
