--- a/DreamIsland/Views/Collectibles/Add.cshtml
+++ b/DreamIsland/Views/Collectibles/Add.cshtml
@@ -6,3 +6,7 @@
 }
 
 <partial name="_CollectibleFormPartial" model="@Model" />
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
