--- a/DreamIsland/Views/Partners/Become.cshtml
+++ b/DreamIsland/Views/Partners/Become.cshtml
@@ -1,6 +1,6 @@
 ﻿@model BecomePartnerFormModel
 
-@{ 
+@{
     ViewBag.Title = "Dream Island - Become Partner";
 }
 
@@ -24,3 +24,7 @@
         </form>
     </div>
 </div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
