--- a/DreamIsland/Views/Cars/Edit.cshtml
+++ b/DreamIsland/Views/Cars/Edit.cshtml
@@ -1,8 +1,12 @@
 ﻿@model CarFormModel
 
-@{ 
+@{
     ViewBag.Title = "Dream Island - Edit Car";
     ViewBag.FormTitle = "Edit Car";
 }
 
 <partial name="_CarFormPartial" model="@Model" />
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
