--- a/DreamIsland/Views/Cars/_CarsPartial.cshtml
+++ b/DreamIsland/Views/Cars/_CarsPartial.cshtml
@@ -10,7 +10,7 @@
                     <h5 class="card-title text-center">@(car.Brand + " " + car.Model)</h5>
                     <p>@car.Year</p>
                     <a asp-controller="Cars" asp-action="Details" asp-route-id="@car.Id" class="btn btn-primary">Details</a>
-                    @if (ViewBag.AllowMoreFunctionality == true)
+                    @if (ViewBag.AllowMoreFunctionality == true || this.User.IsAdmin())
                     {
                         <a asp-controller="Cars" asp-action="Edit" asp-route-id="@car.Id" class="btn btn-warning">Edit</a>
                         <a asp-controller="Cars" asp-action="Delete" asp-route-id="@car.Id" class="btn btn-danger">Delete</a>
