--- a/DreamIsland/Views/Celebrities/Add.cshtml
+++ b/DreamIsland/Views/Celebrities/Add.cshtml
@@ -6,3 +6,7 @@
 }
 
 <partial name="_CelebrityFormPartial" model="@Model" />
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
