--- a/DreamIsland/Views/Celebrities/_CelebritiesPartial.cshtml
+++ b/DreamIsland/Views/Celebrities/_CelebritiesPartial.cshtml
@@ -10,7 +10,7 @@
                     <h5 class="card-title text-center">@celebrity.Name</h5>
                     <p>@celebrity.Occupation</p>
                     <a asp-controller="Celebrities" asp-action="Details" asp-route-id="@celebrity.Id" class="btn btn-primary">Details</a>
-                    @if (ViewBag.AllowMoreFunctionality == true)
+                    @if (ViewBag.AllowMoreFunctionality == true || this.User.IsAdmin())
                     {
                         <a asp-controller="Celebrities" asp-action="Edit" asp-route-id="@celebrity.Id" class="btn btn-warning">Edit</a>
                         <a asp-controller="Celebrities" asp-action="Delete" asp-route-id="@celebrity.Id" class="btn btn-danger">Delete</a>
