--- a/DreamIsland/Views/Collectibles/Edit.cshtml
+++ b/DreamIsland/Views/Collectibles/Edit.cshtml
@@ -1,8 +1,12 @@
 ﻿@model CollectibleFormModel
 
-@{ 
+@{
     ViewBag.Title = "Dream Island - Edit Collectible";
     ViewBag.FormTitle = "Edit Collectible";
 }
 
 <partial name="_CollectibleFormPartial" model="@Model" />
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
