--- a/DreamIsland/Views/Islands/Edit.cshtml
+++ b/DreamIsland/Views/Islands/Edit.cshtml
@@ -1,8 +1,12 @@
 ﻿@model IslandFormModel
 
-@{ 
+@{
     ViewBag.Title = "Dream Island - Edit Island";
     ViewBag.FormTitle = "Edit Island";
 }
 
 <partial name="_IslandFormPartial" model="@Model" />
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
