Introduced cache for Home page.

--- a/DreamIsland/Views/_ViewImports.cshtml
+++ b/DreamIsland/Views/_ViewImports.cshtml
@@ -8,4 +8,5 @@
 @using DreamIsland.Data.Enums
 @using DreamIsland.Models.Partners
 @using DreamIsland.Infrastructure
+@using DreamIsland.Services.Island.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
