--- a/DreamIsland/Views/_ViewImports.cshtml
+++ b/DreamIsland/Views/_ViewImports.cshtml
@@ -2,9 +2,12 @@
 @using DreamIsland.Data.Models
 @using DreamIsland.Models
 @using DreamIsland.Models.Cars
+@using DreamIsland.Services.Car.Models
+@using DreamIsland.Services.Collectible.Models
 @using DreamIsland.Models.Islands
 @using DreamIsland.Models.Celebrities
 @using DreamIsland.Models.Collectibles
+@using DreamIsland.Services.Celebrity.Models
 @using DreamIsland.Data.Enums
 @using DreamIsland.Models.Partners
 @using DreamIsland.Infrastructure
