--- a/DreamIsland/Views/Cars/_CarsPartial.cshtml
+++ b/DreamIsland/Views/Cars/_CarsPartial.cshtml
@@ -9,7 +9,7 @@
                 <div class="card-body text-center">
                     <h5 class="card-title text-center">@(car.Brand + " " + car.Model)</h5>
                     <p>@car.Year</p>
-                    <a asp-controller="Cars" asp-action="Details" asp-route-id="@car.Id" class="btn btn-primary">Details</a>
+                    <a asp-controller="Cars" asp-action="Details" asp-route-id="@car.Id" asp-route-information="@(car.Brand + "-" + car.Model)" class="btn btn-primary">Details</a>
                     @if (ViewBag.AllowMoreFunctionality == true || this.User.IsAdmin())
                     {
                         <a asp-controller="Cars" asp-action="Edit" asp-route-id="@car.Id" class="btn btn-warning">Edit</a>
