Added administration for islands.

--- a/DreamIsland/Views/Celebrities/All.cshtml
+++ b/DreamIsland/Views/Celebrities/All.cshtml
@@ -6,7 +6,7 @@
 
 <form method="get">
     <div class="row">
-        <div class="form-group col-md-6">
+        <div class="form-group col-md-6 text-center">
             <label asp-for="Occupation"></label>
             <select asp-for="Occupation" id="occupations" class="form-control">
                 <option value="">All</option>
@@ -16,7 +16,7 @@
                 }
             </select>
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-md-6 text-center">
             <label asp-for="SearchTerm"></label>
             <input asp-for="SearchTerm" class="form-control" placeholder="Please enter celebrity name" />
         </div>
