--- a/DreamIsland/Views/Home/Index.cshtml
+++ b/DreamIsland/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 
 @if (!Model.Any())
 {
-    <div class="jumbotron">
+    <div class="jumbotron text-center">
         <h1 class="display-4">Welcome to Dream Island!</h1>
         <p class="lead">Currently we do not have any available islands for sale</p>
         <hr class="my-4">
