--- a/DreamIsland/Views/Cars/All.cshtml
+++ b/DreamIsland/Views/Cars/All.cshtml
@@ -6,7 +6,7 @@
 
 <form method="get">
     <div class="row">
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-4 text-center">
             <div class="form-group">
                 <label asp-for="Brand"></label>
                 <select asp-for="Brand" id="brands" class="form-control">
@@ -18,11 +18,11 @@
                 </select>
             </div>
         </div>
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-4 text-center">
             <label asp-for="SearchTerm"></label>
             <input asp-for="SearchTerm" class="form-control" placeholder="Please enter car model" />
         </div>
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-4 text-center">
             <div class="form-group">
                 <label asp-for="CarsSorting"></label>
                 <select asp-for="CarsSorting" class="form-control" id="car-sorting">
