--- a/DreamIsland/Views/Collectibles/All.cshtml
+++ b/DreamIsland/Views/Collectibles/All.cshtml
@@ -6,7 +6,7 @@
 
 <form method="get">
     <div class="row">
-        <div class="form-group col-md-6">
+        <div class="form-group col-md-6 text-center">
             <div class="form-group">
                 <label asp-for="RarityLevel"></label>
                 <select asp-for="RarityLevel" id="rarity-levels" class="form-control">
@@ -18,7 +18,7 @@
                 </select>
             </div>
         </div>
-        <div class="form-group col-md-6">
+        <div class="form-group col-md-6 text-center">
             <label asp-for="SearchTerm"></label>
             <input asp-for="SearchTerm" class="form-control" placeholder="Please enter collectible name" />
         </div>
