--- a/DreamIsland/Views/Islands/All.cshtml
+++ b/DreamIsland/Views/Islands/All.cshtml
@@ -6,7 +6,7 @@
 
 <form method="get">
     <div class="row">
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-4 text-center">
             <div class="form-group">
                 <label asp-for="Region"></label>
                 <select asp-for="Region" id="regions" class="form-control">
@@ -20,11 +20,11 @@
             </div>
         </div>
 
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-4 text-center">
             <label asp-for="SearchTerm"></label>
             <input asp-for="SearchTerm" class="form-control" placeholder="Please enter island name or location">
         </div>
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-4 text-center">
             <div class="form-group">
                 <label asp-for="IslandSorting"></label>
                 <select asp-for="IslandSorting" class="form-control" id="island-sorting">
