--- a/DreamIsland/Views/Shared/_LoginPartial.cshtml
+++ b/DreamIsland/Views/Shared/_LoginPartial.cshtml
@@ -47,6 +47,22 @@
                 </div>
             </li>
         }
+        else if (userIsAdmin)
+        {
+            <li class="nav-item">
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Administration
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" asp-area="Admin" asp-controller="Islands" asp-action="All">Islands</a>
+                        <a class="dropdown-item" asp-area="Admin" asp-controller="Cars" asp-action="All">Cars</a>
+                        <a class="dropdown-item" asp-area="Admin" asp-controller="Celebrities" asp-action="All">Celebrities</a>
+                        <a class="dropdown-item" asp-area="Admin" asp-controller="Collectibles" asp-action="All">Collectibles</a>
+                    </div>
+                </div>
+            </li>
+        }
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">My Account</a>
         </li>
