--- a/DreamIsland/Areas/Admin/Views/_ViewImports.cshtml
+++ b/DreamIsland/Areas/Admin/Views/_ViewImports.cshtml
@@ -12,5 +12,6 @@
 @using DreamIsland.Models.Partners
 @using DreamIsland.Infrastructure
 @using DreamIsland.Areas.Admin.Models.Island
+@using DreamIsland.Areas.Admin.Models.Car
 @using DreamIsland.Services.Island.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
